change div to img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <p class="instruction">Click on the image to give you hints it'll show you whether you're warm or cold</p>
     </header>
     <div class="content">
-      <div id="waldo"></div>
+      <img src="waldo.png" id="waldo"/>
       <div class="hint"></div>
     </div>
   </body>
