--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
   </head>
   <body>
     <header>
@@ -14,7 +15,10 @@
     </header>
     <div class="content">
       <img src="waldo.png" id="waldo"/>
-      <div class="hint"></div>
+      <div class="hint-div">
+        <h1 id="hint"></h1>
+      </div>
     </div>
+    <script src="hint.js"></script>
   </body>
 </html>
